--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -74,7 +79,7 @@
 				<version>3.1.0</version>
 				<configuration>
 					<!-- test skip 하려면 true 설정 -->
-					<skipTests>true</skipTests>
+					<skipTests>false</skipTests>
 				</configuration>
 			</plugin>
 
