--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# ?? ??
+server.port=8090
+spring.application.name=bookbom-shop
+spring.profiles.active=dev
+# ??? ????? ??
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=bookbom-shop
+# endpoint ??
+management.endpoint.health.status.order=DOWN, UP
+management.endpoint.jolokia.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.pause.enabled=true
+management.endpoint.resume.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoint.shutdown.enabled=true
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=health,info
 
