--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+secure.manager.ip=1d4acf265912450b9a183e09fb7ea3a9
+secure.manager.password=295f392bdd034d81a3c7a1c8551b8854
+secure.manager.port=8c96c80eed3546ad8adfdbf5d414d7d6
+secure.manager.username=913cf3ef39ae48eab5965d601a07457e
+keystore=classpath:keystore/bookbom-certificate.p12
+keymanager.url=https://api-keymanager.nhncloudservice.com/keymanager/v1.0/appkey/
 
