[feat] appkey와 password CI/CD 환경변수로 숨김 처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ secure.manager.port=8c96c80eed3546ad8adfdbf5d414d7d6
 secure.manager.username=913cf3ef39ae48eab5965d601a07457e
 keystore=classpath:keystore/bookbom-certificate.p12
 keymanager.url=https://api-keymanager.nhncloudservice.com/keymanager/v1.0/appkey/
-
+secure.manager.appkey=${SECURE_MANAGER_APPKEY}
+keystore.password=${SECURE_MANAGER_PASSWORD}
