[fix] CI/CD 스프링 실행 profile prod로 설정

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           SECURE_MANAGER_APPKEY: ${{ secrets.SECURE_MANAGER_APPKEY }}
           SECURE_MANAGER_PASSWORD: ${{ secrets.SECURE_MANAGER_PASSWORD }}
-        run: mvn -B package -Dsecure.manager.appkey="${SECURE_MANAGER_APPKEY}" -Dkeystore.password="${SECURE_MANAGER_PASSWORD}" --file pom.xml
+        run: mvn -B package -Dsecure.manager.appkey="${SECURE_MANAGER_APPKEY}" -Dkeystore.password="${SECURE_MANAGER_PASSWORD}" -Dspring.profiles.active=prod --file pom.xml
 
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
