[fix] 인증서 비밀번호 PASSWORD -> KEYPASSWORD로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 keystore=classpath:keystore/bookbom-certificate.p12
-keystore.password=${SECURE_MANAGER_PASSWORD}
+keystore.password=${SECURE_MANAGER_KEYPASSWORD}
