[Feature] 상용환경에서 유레카 접속

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-# ?? ??
-server.port=8090
-eureka.instance.instance-id=bookbom-shop-dev
-eureka.instance.hostname=localhost
-# ??? ?? ??
-eureka.client.service-url.defaultZone=http://admin:1234@localhost:8761/eureka
+# development environment
+# connection settings
+bookbom.eureka-address:127.0.0.1
+bookbom.eureka-port:8761
+# eureka client settings
+eureka.client.service-url.defaultZone=http://admin:1234@${bookbom.eureka-address}:${bookbom.eureka-port}/eureka
