--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-# ?? ??
-server.port=8090
+# basic settings
+server.port=8010
 spring.application.name=bookbom-shop
-spring.profiles.active=dev
-# ??? ????? ??
+# eureka client settings
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=bookbom-shop
-# endpoint ??
+# endpoint settings
 management.endpoint.health.status.order=DOWN, UP
 management.endpoint.jolokia.enabled=true
 management.endpoint.metrics.enabled=true
