[Refactor] 충돌 해결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ management.endpoint.restart.enabled=true
 management.endpoint.shutdown.enabled=true
 management.info.env.enabled=true
 management.endpoints.web.exposure.include=health,info
+# secure key manager settings
+keystore=classpath:keystore/bookbom-certificate.p12
+keystore.password=${SECURE_MANAGER_KEYPASSWORD}
 
