[Fix] 빌드 속도 개선

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package -Dsecure.manager.appkey="${{ secrets.SECURE_MANAGER_APPKEY }}" -Dkeystore.password="${{ secrets.SECURE_MANAGER_PASSWORD }}" -Dspring.profiles.active=prod --file pom.xml
+        run: mvn -B package -Dsecure.manager.appkey="${{ secrets.SECURE_MANAGER_APPKEY }}" -Dkeystore.password="${{ secrets.SECURE_MANAGER_PASSWORD }}" -Dspring.profiles.active=prod -Deureka.client.register-with-eureka=false -Deureka.client.fetch-registry=false  --file pom.xml
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
