[Feature] 무중단 배포를 위한 설정 파일 업데이트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # basic settings
 server.port=8010
+server.shutdown=graceful
 spring.application.name=bookbom-shop
 # eureka client settings
 eureka.client.register-with-eureka=true
