--- a/src/main/resources/application-prod2.properties
+++ b/src/main/resources/application-prod2.properties
@@ -1,10 +1,12 @@
 # production environment
+# basic settings
+server.port=8011
 # connection settings
 bookbom.eureka-address:192.168.0.55
 bookbom.eureka-port:8761
 # eureka client settings
 eureka.client.service-url.defaultZone=http://bom_admin:1q2w3e4r@${bookbom.eureka-address}:${bookbom.eureka-port}/eureka/
-eureka.instance.instance-id=bookbom-shop-prod1
+eureka.instance.instance-id=bookbom-shop-prod2
 # secure key manager settings
 secure.manager.ip=1d4acf265912450b9a183e09fb7ea3a9
 secure.manager.password=295f392bdd034d81a3c7a1c8551b8854
