[Fix] prod db 설정값 추가, yml 파일 업데이트, actuator 경로 수정

--- a/src/main/resources/application-prod2.properties
+++ b/src/main/resources/application-prod2.properties
@@ -14,3 +14,15 @@ secure.manager.port=8c96c80eed3546ad8adfdbf5d414d7d6
 secure.manager.username=913cf3ef39ae48eab5965d601a07457e
 secure.manager.appkey=${SECURE_MANAGER_APPKEY}
 keymanager.url=https://api-keymanager.nhncloudservice.com/keymanager/v1.0/appkey/
+# database settings
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+# hibernate settings
+spring.jpa.hibernate.ddl-auto=none
+# datasource settings
+spring.sql.init.mode=never
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_ID}
+spring.datasource.password=${MYSQL_PWD}
+spring.datasource.dbcp2.validation-query=SELECT 1
