--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package -Dsecure.manager.appkey="${{ secrets.SECURE_MANAGER_APPKEY }}" -Dkeystore.password="${{ secrets.SECURE_MANAGER_PASSWORD }}" -Dspring.profiles.active=prod -Deureka.client.register-with-eureka=false -Deureka.client.fetch-registry=false  --file pom.xml
+        run: mvn -B package -Dsecure.manager.appkey="${{ secrets.SECURE_MANAGER_APPKEY }}" -Dkeystore.password="${{ secrets.SECURE_MANAGER_PASSWORD }}" -Dspring.profiles.active=prod -Deureka.client.register-with-eureka=false -Deureka.client.fetch-registry=false -Dspring.datasource.url="${{ secrets.MYSQL_URL }}" -Dspring.datasource.username="${{ secrets.MYSQL_ID }}" -Dspring.datasource.password="${{ secrets.MYSQL_PWD }}" --file pom.xml
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
@@ -50,12 +50,15 @@ jobs:
         env:
           SECURE_MANAGER_APPKEY: ${{ secrets.SECURE_MANAGER_APPKEY }}
           KEYSTORE_PASSWORD: ${{ secrets.SECURE_MANAGER_PASSWORD }}
+          MYSQL_URL: ${{ secrets.MYSQL_URL }}
+          MYSQL_ID: ${{ secrets.MYSQL_ID }}
+          MYSQL_PWD: ${{ secrets.MYSQL_PWD }}
         with:
           host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: SECURE_MANAGER_APPKEY, KEYSTORE_PASSWORD
+          envs: SECURE_MANAGER_APPKEY, KEYSTORE_PASSWORD, MYSQL_URL, MYSQL_ID, MYSQL_PWD
           script_stop: true
           script: "./startup.sh"
 
