--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ secure.manager.schema=7f108b5a41fa4687b571ebd0f4a95859
 secure.manager.appkey=${SECURE_MANAGER_APPKEY}
 keymanager.url=https://api-keymanager.nhncloudservice.com/keymanager/v1.0/appkey/
 spring.jpa.hibernate.ddl-auto=validate
+# object storage settings
+object.storage.auth.url=https://api-identity-infrastructure.nhncloudservice.com/v2.0
+object.storage.tenant.id=fcb81f74e379456b8ca0e091d351a7af
+object.storage.username=a98792530@gmail.com
+object.storage.password=${SECURE_MANAGER_KEYPASSWORD}
+object.storage.api.userid=a22d9b88c95947279aa377927820482d
+object.storage.url=https://kr1-api-object-storage.nhncloudservice.com/v1/AUTH_fcb81f74e379456b8ca0e091d351a7af
