[feat] ElasticSearch 의존성 추가 및 접속 정보 설정

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ eureka.client.service-url.defaultZone=http://admin:1234@${bookbom.eureka-address
 eureka.instance.instance-id=bookbom-shop-dev1
 # Secure Key Manager 개발환경 DB 설정
 secure.manager.schema=0dc683fab6d948b7b9d3299f4835d31d
+# elasticsearch logging
+logging.level.org.springframework.data.elasticsearch.client.WIRE=TRACE
