--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ object.storage.url=https://kr1-api-object-storage.nhncloudservice.com/v1/AUTH_fc
 # JPA settings
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
+# elasticsearch settings
+secure.manager.elastic.ip=37846c26fa014ba39c886814eaf3ad3e
+secure.manager.elastic.port=c609ba7a3d1c4bfe8bb40412ac10653b
