--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>3.2.4</version>
         </dependency>
 
         <dependency>
