--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,3 +16,4 @@ tosspay.confirm-url=https://api.tosspayments.com/v1/payments/confirm
 tosspay.authorization=Basic dGVzdF9za19tYTYwUlpibHJxelA3azI3V2JYRTh3ellXQm4xOg==
 tosspay.secret-key=test_sk_ma60RZblrqzP7k27WbXE8wzYWBn1:
 tosspay.client-key=test_ck_ex6BJGQOVDbEXGJvJJ558W4w2zNb
+spring.jpa.show-sql=true
