[fix] 도메인에서 개발 환경 DB 볼 수 있도록 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,8 @@ secure.manager.ip=1d4acf265912450b9a183e09fb7ea3a9
 secure.manager.password=295f392bdd034d81a3c7a1c8551b8854
 secure.manager.port=8c96c80eed3546ad8adfdbf5d414d7d6
 secure.manager.username=913cf3ef39ae48eab5965d601a07457e
-secure.manager.schema=7f108b5a41fa4687b571ebd0f4a95859
+# TODO ?? ?? ???? ??
+secure.manager.schema=0dc683fab6d948b7b9d3299f4835d31d
 secure.manager.appkey=${SECURE_MANAGER_APPKEY}
 keymanager.url=https://api-keymanager.nhncloudservice.com/keymanager/v1.0/appkey/
 # object storage settings
@@ -39,3 +40,4 @@ spring.jpa.hibernate.ddl-auto=validate
 # elasticsearch settings
 secure.manager.elastic.ip=37846c26fa014ba39c886814eaf3ad3e
 secure.manager.elastic.port=c609ba7a3d1c4bfe8bb40412ac10653b
+
