[feat] security jwt filter 구성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,4 @@ secure.manager.elastic.port=c609ba7a3d1c4bfe8bb40412ac10653b
 # toss pay parameter
 tosspay.confirm-url=https://api.tosspayments.com/v1/payments/confirm
 tosspay.secret-key=test_sk_ma60RZblrqzP7k27WbXE8wzYWBn1
+jwt.secret-key=${JWT_SECRET_KEY}
