[fix] BatchSize 추가 및 신상 도서 로직 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,7 @@ object.storage.url=https://kr1-api-object-storage.nhncloudservice.com/v1/AUTH_fc
 # JPA settings
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 # elasticsearch settings
 secure.manager.elastic.ip=37846c26fa014ba39c886814eaf3ad3e
 secure.manager.elastic.port=c609ba7a3d1c4bfe8bb40412ac10653b
