[fix] JWT Secret Key 환경변수 추가

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,7 +56,7 @@ jobs:
           username: ${{ secrets.SSH_ID }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: SECURE_MANAGER_APPKEY, KEYSTORE_PASSWORD
+          envs: SECURE_MANAGER_APPKEY, KEYSTORE_PASSWORD, JWT_SECRET_KEY
           script_stop: true
           script: "./startup.sh"
 
