[feat] 배포 서버에서 배포 스키마 보도록 설정

--- a/src/main/resources/application-prod2.properties
+++ b/src/main/resources/application-prod2.properties
@@ -2,8 +2,9 @@
 # basic settings
 server.port=8011
 # connection settings
-bookbom.eureka-address:192.168.0.55
-bookbom.eureka-port:8761
+bookbom.eureka-address=192.168.0.55
+bookbom.eureka-port=8761
 # eureka client settings
 eureka.client.service-url.defaultZone=http://bom_admin:1q2w3e4r@${bookbom.eureka-address}:${bookbom.eureka-port}/eureka/
 eureka.instance.instance-id=bookbom-shop-prod2
+secure.manager.schema=7f108b5a41fa4687b571ebd0f4a95859
